--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -56,6 +56,7 @@ nav:
     - 10. AI (mesterséges intelligencia):
       - mesterseges_intelligencia/README.md
       - mesterseges_intelligencia/practice.md
+      - mesterseges_intelligencia/kaggle_notebook.md
   - Nagy féléves, kis beadandó:
     - feleves_beadando/README.md
     - feleves_beadando/kisbeadando.md
