--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,6 +57,7 @@ nav:
       - mesterseges_intelligencia/README.md
       - mesterseges_intelligencia/practice.md
       - mesterseges_intelligencia/kaggle_notebook.md
+      - NN Introduction: mesterseges_intelligencia/nn_intro_slides.md
   - Nagy féléves, kis beadandó:
     - feleves_beadando/README.md
     - feleves_beadando/kisbeadando.md
@@ -96,6 +97,7 @@ theme:
       toggle:
         icon: material/weather-sunny
         name: Switch to light mode
+  custom_dir: theme
   features:
   - search.suggest
   - content.code.copy
@@ -221,3 +223,12 @@ plugins:
         background_color: "#43AEC5"
         color: "#ffffff" 
         font_family: Ubuntu
+
+reveal:
+  path: reveal.js/dist
+  transition: slide
+  theme:
+    name: white.css
+    path: theme
+  plugin:
+    path: reveal.js/plugin
