--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,7 +57,7 @@ nav:
       - mesterseges_intelligencia/README.md
       - mesterseges_intelligencia/practice.md
       - mesterseges_intelligencia/kaggle_notebook.md
-      - NN Introduction: mesterseges_intelligencia/nn_intro_slides.md
+      - mesterseges_intelligencia/slides/slides_nn.md
   - Nagy féléves, kis beadandó:
     - feleves_beadando/README.md
     - feleves_beadando/kisbeadando.md
@@ -217,6 +217,7 @@ extra_javascript:
 
 plugins:
   - search
+  - slides
   - social:
       cards_layout_options:
         background_image: 'assets/images/social1.png'
