--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-mkdocs-material==9.5.23
-mkdocs-material-extensions>=1.1
-pillow 
+mkdocs==1.6.0
+mkdocs-material==9.6.14
+mkdocs-material-extensions==1.3.1
+mkdocs-get-deps==0.2.0
+mkdocs-slides==0.1.3
+pillow==10.3.0
 cairosvg
-mkdocs-slides
-
